<resources>
    <string name="app_name">东家二掌柜（平板）</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    
    <string name="parish_food">堂点</string>
    <string name="fast_food">快餐</string>
    <string name="order_list">订单</string>
    <string name="reserve">预订</string>
    <string name="lineup">排号</string>
    <string name="recharge">充值</string>
    <string name="message">消息</string>
    <string name="printer">交班</string>
    <string name="setting">设置</string>
    <string name="cashier">收银员</string>


    <string name="state_leisure">空闲</string>
    <string name="state_open">已开桌</string>
    <string name="state_order">已下单</string>
    <string name="people_num">%1$s人</string>
    <string name="price_prefix">￥%1$2.2f</string>
    <string name="diners_num">用餐人数</string>
    <string name="tableware_num">餐具数</string>
    <string name="price_and_unit">￥%1$2.2f/%2$s</string>
    <string name="num_prefix">x%1$s</string>
    <string name="confirm">确认</string>
    <string name="order_diashes">点菜</string>
    <string name="clear_table">清台</string>
    <string name="shop_setting">店铺配置</string>
    <string name="setting_id">店铺ID</string>
    <string name="setting_room">刷新房间</string>
    <string name="setting_food">刷新菜品</string>
    <string name="setting_confirm">确定</string>
    <string name="order_cart_price">下单 ￥%1$2.2f (%2$d)</string>
    <string name="pay">结账</string>
    <string name="scan_pay">扫码结账</string>
    <string name="total_price">合计: ￥%1$2.2f</string>
    <string name="all_kouwei">批量品注</string>
    <string name="add_food">加菜</string>
    <string name="change_table">换桌</string>
    <string name="cancel_order">撤单</string>
    <string name="merge_order">并单</string>
    <string name="food_printer">商品补打</string>
    <string name="push_food">整单催菜</string>
    <string name="change_peopel">修改人数</string>
    <string name="transfer_food">转菜</string>
    <string name="urged_food">催菜</string>
    <string name="refund">退菜</string>
    <string name="giving">赠送</string>
    
    <string name="member_num">会员编码:%1$s</string>
    <string name="member_name">会员姓名:%1$s</string>
    <string name="member_phone">电话号码:%1$s</string>
    <string name="member_balance">账户余额:￥%1$2.2f</string>
    <string name="member_points">账户积分:%1$d</string>
    <string name="original">原价:￥%1$2.2f</string>
    <string name="amount_payable">应付金额:￥%1$2.2f</string>
    <string name="ware_price">餐具费:￥%1$2.2f</string>
    <string name="refundable_mount">应退金额:￥%1$2.2f</string>
    <string name="discounts">优惠:￥%1$2.2f</string>
    <string name="other_pay">还需支付:￥%1$2.2f</string>
    <string name="earnest">定金:￥%1$2.2f</string>

    <string name="card_num">卡号:%1$s</string>
    <string name="name">姓名:%1$s</string>
    <string name="phone">手机:%1$s</string>
    <string name="balance">余额:￥%1$2.2f</string>
    <string name="points">积分:%1$s</string>
    <string name="order_num">订单编号: %1$s</string>
    <string name="order_time">下单时间: %1$s</string>
    <string name="order_table">桌台编号: %1$s</string>
    <string name="order_people">点餐员: %1$s</string>
    <string name="order_name">预订人: %1$s</string>
    <string name="order_phone">预订电话: %1$s</string>
    <string name="order_price">订单金额: ￥%1$2.2f</string>
    <string name="order_discount">优惠金额: ￥%1$2.2f</string>
    <string name="order_pay">实付金额: ￥%1$2.2f</string>
    <string name="message_user">点餐员-%1$s</string>
    <string name="message_remark">备注: %1$s</string>
    <string name="permission_price_prefix">-￥%1$2.2f</string>
    <string name="state_bill">结账中</string>
    <string name="pay_print">预打账单</string>

</resources>
