<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="72px"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/color333d4b"
            >
            <com.administrator.shopkeepertablet.view.widget.TabView
                android:layout_width="match_parent"
                android:layout_height="64px"
                android:id="@+id/tab_parish_food"
                app:tab_icon="@drawable/selector_tab_parish_food"
                app:tab_name="@string/parish_food"
                />
            <com.administrator.shopkeepertablet.view.widget.TabView
                android:layout_width="match_parent"
                android:layout_height="64px"
                android:id="@+id/tab_fast_food"
                app:tab_icon="@drawable/selector_tab_fast_food"
                app:tab_name="@string/fast_food"
                />
            <com.administrator.shopkeepertablet.view.widget.TabView
                android:layout_width="match_parent"
                android:layout_height="64px"
                android:id="@+id/tab_order_list"
                app:tab_icon="@drawable/selector_tab_order_list"
                app:tab_name="@string/order_list"
                />
            <com.administrator.shopkeepertablet.view.widget.TabView
                android:layout_width="match_parent"
                android:layout_height="64px"
                android:id="@+id/tab_reserve"
                app:tab_icon="@drawable/selector_tab_reserve"
                app:tab_name="@string/reserve"
                />
            <com.administrator.shopkeepertablet.view.widget.TabView
                android:layout_width="match_parent"
                android:layout_height="64px"
                android:id="@+id/tab_lineup"
                app:tab_icon="@drawable/selector_tab_lineup"
                app:tab_name="@string/lineup"
                />
            <com.administrator.shopkeepertablet.view.widget.TabView
                android:layout_width="match_parent"
                android:layout_height="64px"
                android:id="@+id/tab_recharge"
                app:tab_icon="@drawable/selector_tab_recharge"
                app:tab_name="@string/recharge"
                />
            <com.administrator.shopkeepertablet.view.widget.TabView
                android:layout_width="match_parent"
                android:layout_height="64px"
                android:id="@+id/tab_message"
                app:tab_icon="@drawable/selector_tab_message"
                app:tab_name="@string/message"
                />
            <com.administrator.shopkeepertablet.view.widget.TabView
                android:layout_width="match_parent"
                android:layout_height="64px"
                android:id="@+id/tab_printer"
                app:tab_icon="@drawable/selector_tab_printer"
                app:tab_name="@string/printer"
                />
            <com.administrator.shopkeepertablet.view.widget.TabView
                android:layout_width="match_parent"
                android:layout_height="64px"
                android:id="@+id/tab_setting"
                app:tab_icon="@drawable/selector_tab_setting"
                app:tab_name="@string/setting"
                />
            
        </LinearLayout>
        
        
        
    </RelativeLayout>
    
</layout>