<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.administrator.shopkeepertablet.viewmodel.SettingViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorf0f5f6"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="228px"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="53px"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="36px"
                    android:layout_height="36px"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/nav_repeat"
                    android:tint="@color/color798795" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/shop_setting"
                    android:textColor="@color/color798795"
                    android:textSize="22px" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorf2f2f2"
                />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="match_parent"
                android:layout_height="48px"
                android:background="@color/colorf0f5f6"
                android:text="@string/setting_id"
                android:textSize="17px"
                android:gravity="center_vertical"
                android:paddingLeft="36px"
                android:textColor="@color/color1bbc9c"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorf2f2f2"
                />

            <TextView
                android:id="@+id/tv_room"
                android:layout_width="match_parent"
                android:layout_height="48px"
                android:text="@string/setting_room"
                android:textSize="17px"
                android:gravity="center_vertical"
                android:paddingLeft="36px"
                android:textColor="@color/color798795"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorf2f2f2"
                />

            <TextView
                android:id="@+id/tv_food"
                android:layout_width="match_parent"
                android:layout_height="48px"
                android:text="@string/setting_food"
                android:textSize="17px"
                android:gravity="center_vertical"
                android:paddingLeft="36px"
                android:textColor="@color/color798795"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorf2f2f2"
                />
        </LinearLayout>

        <View
            android:layout_width="2px"
            android:layout_height="match_parent"
            android:background="@color/color19000000"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48px"
            android:layout_marginTop="54px"
            >

            <LinearLayout
                android:id="@+id/ll_id"
                android:layout_width="480px"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:background="@drawable/shape_login_edit"
                >
                <TextView
                    android:layout_width="100px"
                    android:layout_height="match_parent"
                    android:text="@string/setting_id"
                    android:textColor="@color/color666666"
                    android:textSize="18px"
                   android:gravity="center"
                    />
                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/colore5e5e5"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="@={viewModel.id}"
                    android:textSize="18px"
                    android:textColor="@color/color333333"
                    android:paddingLeft="16px"
                    />

            </LinearLayout>

            <TextView
                android:layout_toRightOf="@+id/ll_id"
                android:id="@+id/tv_confirm"
                android:layout_width="118px"
                android:layout_height="match_parent"
                android:background="@drawable/shape_login_button"
                android:layout_marginLeft="16px"
                android:text="@string/setting_confirm"
                android:textColor="@color/colorWhite"
                android:textSize="22px"
                android:gravity="center"
                />

        </RelativeLayout>

    </LinearLayout>

</layout>