<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="720px"
        android:layout_height="520px"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16px"
                android:text="会员识别"
                android:textColor="@color/color666666"
                android:textSize="20px" />

            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="24px"
                android:layout_height="24px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16px"
                android:src="@mipmap/ic_expand_close" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colore5e5e5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginLeft="16px"
            android:layout_marginRight="16px"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="320px"
                    android:layout_height="48px"
                    android:layout_marginTop="16px"
                    android:background="@drawable/shape_login_edit"
                    android:orientation="horizontal"
                    >
                    <EditText
                        android:id="@+id/et_member_num"
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:textCursorDrawable="@drawable/shape_edit_cursor"
                        android:textSize="18px"
                        android:textColor="@color/color333333"
                        />
                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/colore5e5e5"
                        />
                    <TextView
                        android:id="@+id/tv_search_member"
                        android:layout_width="100px"
                        android:layout_height="match_parent"
                        android:background="@color/colorf2f2f2"
                        android:text="搜索会员"
                        android:textSize="18px"
                        android:textColor="@color/color666666"
                        android:gravity="center"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_member_info"
                    android:layout_width="320px"
                    android:layout_height="168px"
                    android:layout_marginTop="16px"
                    android:orientation="vertical"
                    android:background="#F3F8F9"
                    android:visibility="invisible"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_num"
                        android:layout_marginTop="12px"
                        android:layout_marginLeft="12px"
                        android:textSize="16px"
                        android:textColor="@color/color848d95"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:layout_marginTop="12px"
                        android:layout_marginLeft="12px"
                        android:textSize="16px"
                        android:textColor="@color/color848d95"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:layout_marginTop="12px"
                        android:layout_marginLeft="12px"
                        android:textSize="16px"
                        android:textColor="@color/color848d95"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16px"
                        android:layout_marginLeft="12px"
                        android:layout_marginRight="12px"
                        >
                        <TextView
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/balance"
                            android:textColor="@color/color666666"
                            android:textSize="18px"
                            />
                        <TextView
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/points"
                            android:textColor="@color/color666666"
                            android:textSize="18px"
                            />
                    </LinearLayout>
                    
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_integral"
                    android:layout_width="320px"
                    android:layout_height="48px"
                    android:layout_marginTop="16px"
                    android:background="@drawable/shape_login_edit"
                    android:orientation="horizontal"
                    android:visibility="invisible"
                    >
                    <EditText
                        android:id="@+id/et_integral"
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:textCursorDrawable="@drawable/shape_edit_cursor"
                        android:textSize="18px"
                        android:textColor="@color/color333333"
                        />
                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/colore5e5e5"
                        />
                    <TextView
                        android:id="@+id/tv_integral"
                        android:layout_width="100px"
                        android:layout_height="match_parent"
                        android:background="@color/colorf2f2f2"
                        android:text="兑换积分"
                        android:textSize="18px"
                        android:textColor="@color/color666666"
                        android:gravity="center"
                        />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/colore5e5e5"
                android:layout_marginLeft="16px"
                />

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="可用卡券"
                    android:textSize="17px"
                    android:textColor="@color/color97a3aa"
                    android:layout_marginTop="16px"
                    android:layout_marginLeft="20px"
                    android:layout_marginBottom="16px"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rlv_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16px"
                    android:layout_marginRight="16px"
                    >
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colore5e5e5"
            android:layout_marginTop="16px"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52px">

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="120px"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/color4ab6f6"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/colorWhite"
                android:textSize="18px" />
        </RelativeLayout>


    </LinearLayout>
</layout>